--- a/mexiSigleView.html
+++ b/mexiSigleView.html
@@ -54,15 +54,35 @@
             padding: 7vh;
         }
 
+
+        @media only screen and (max-width: 768px) {
+
+            #indhold img {
+                width: 90%;
+            }
+
+            #indhold {
+                height: auto;
+            }
+        }
+
+
+
+        @media only screen and (max-width: 375px) {
+
+            #indhold img {
+                width: 90%;
+            }
+
+            #indhold {
+                height: auto;
+            }
+        }
+
     </style>
+
+
 </head>
-
-
-
-
-
-
-
 
 
 
